--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
     </section>
     <section id="competences">
       <h2>Competences</h2>
+      <p> Langages de Programmation : HTML, CSS, JavaScript, Python</p>
+       <p> Outils de Développement : Git, GitHub, Visual Studio Code</p>
     </section>
     <section id="contact">
       <h2>Contact</h2>
       <p>
-        Email : <a href="mailto:youremail@example.com">youremail@example.com</a>
+        Email : <a href="camille.sauret@laplateforme.io">camille.sauret@laplateforme.io</a>
       </p>
     </section>
     <footer><p>&copy; 2024 Camille Sauret. Tous droits réservés.</p></footer>
