--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mon Portfolio</title>
-    <link rel="stylesheet" type="text/css" href="portfolio.css"> <!-- lien css-->
+    <link rel="stylesheet" type="text/css" href="portfolio.css" />
+    <!-- lien css-->
   </head>
   <body>
     <header>
       <h1>Bienvenue sur mon Portfolio</h1>
-      
+
       <nav>
         <ul>
           <li><a href="#about">À propos</a></li>
@@ -21,7 +22,9 @@
     </header>
     <section id="about">
       <h2>À propos</h2>
-      <p class="photo"><img src="FB_IMG_1732020141451.jpg"width=20% height=20%></p>
+      <p class="photo">
+        <img src="FB_IMG_1732020141451.jpg" width="20%" height="20%" />
+      </p>
       <p>
         Je suis Camille SAURET, un développeur passionné à la recherche d'une
         alternance.
@@ -33,30 +36,51 @@
         <h3>Bloom Petals</h3>
         <p>Création d'un site avec html 5 et Css.</p>
         <p>Je vous invite à cliquer sur le lien pour acceder à mon site</p>
-
-        <a href="https://camille-sauret.github.io/job1/" target="_blank">https://camille-sauret.github.io/job1/</a>
-      
+        <img src="Capture d’écran bloom petals.png" width="30%" />
+        <p>
+          <a href="https://camille-sauret.github.io/job1/" target="_blank"
+            >https://camille-sauret.github.io/job1/</a
+          >
+        </p>
       </div>
       <div class="project">
         <h3>Fansite</h3>
         <p>Creation d'un fansite</p>
         <div class="les olympiens">
-          <img src="Capture d'écran 2024-10-25 110012.png" width="50%">
+          <img src="Capture d’écran les olympiens 1.png" width="30%" />
         </div>
       </div>
     </section>
     <section id="competences">
       <h2>Competences</h2>
-      <p> Langages de Programmation : HTML, CSS, JavaScript, Python</p>
-       <p> Outils de Développement : Git, GitHub, Visual Studio Code</p>
+      <p>Langages de Programmation : HTML, CSS, JavaScript, Python</p>
+      <p>Outils de Développement : Git, GitHub, Visual Studio Code</p>
     </section>
     <section id="contact">
-      <h2>Contact</h2>
-      <p>
-        Email : <a href="camille.sauret@laplateforme.io">camille.sauret@laplateforme.io</a>
-      </p>
+      <section id="useful-links" class="useful-links">
+        <div class="container">
+          <h2>Liens utiles</h2>
+          <div class="links-grid">
+            <a
+              href="https://www.linkedin.com/in/camille-sauret-101aa0309/"
+              target="_blank"
+              class="link-item"
+            >
+              <img src="icons8-linkedin-48.png" alt="LinkedIn Logo" />
+              <span>LinkedIn</span>
+            </a>
+            <a
+              href="https://github.com/camille-sauret"
+              target="_blank"
+              class="link-item"
+            >
+              <img src="icons8-github-50.png" alt="GitHub Logo" />
+              <span>GitHub</span>
+            </a>
+          </div>
+        </div>
+      </section>
     </section>
     <footer><p>&copy; 2024 Camille Sauret. Tous droits réservés.</p></footer>
   </body>
 </html>
-
