--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@
         </p>
       </div>
       <div class="project">
-        <h3>Fansite</h3>
+        <h3>A jamais les premiers</h3>
         <p>Creation d'un fansite</p>
+        <p> Je vous invite à cliquer sur le lien pour découvrir ma page</p>
         <div class="les olympiens">
           <img src="Capture d’écran les olympiens 1.png" width="30%" />
+          <p> <a href="https://camille-sauret.github.io/A-jamais-les-premiers/" target="_blank"
+            >https://camille-sauret.github.io/A-jamais-les-premiers/ </a>
+          </p>
         </div>
       </div>
     </section>
