--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
     </section>
     <section id="projects">
       <h2>Projets</h2>
+      <p> Premiers Projets avec HTML et CSS</p>
       <div class="project">
         <h3>Bloom Petals</h3>
-        <p>Création d'un site avec html 5 et Css.</p>
+        <p>Création d'un site</p>
         <p>Je vous invite à cliquer sur le lien pour acceder à mon site</p>
         <img src="Capture d’écran bloom petals.png" width="30%" />
         <p>
@@ -44,8 +45,8 @@
         </p>
       </div>
       <div class="project">
-        <h3>A jamais les premiers</h3>
-        <p>Creation d'un fansite</p>
+        <h3>À jamais les premiers</h3>
+        <p>Création d'un fansite</p>
         <p> Je vous invite à cliquer sur le lien pour découvrir ma page</p>
         <div class="les olympiens">
           <img src="Capture d’écran les olympiens 1.png" width="30%" />
